--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@ function initializeCP()
 
  </head>
 <body onload="onBodyLoad()">
+	
+	<h1>Ce site a été crée à l'initiative de Rhyan Delefortrie. Contacter le 79-38-66 en cas de problème.</h1>
 		<div id='initialLoading'></div>
 <script>
 		(function()
